--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://Praneeth2025.github.io/portfolio",
+  "homepage": "https://Praneeth2025.github.io/portfolio-website",
   "name": "portfolio",
   "version": "0.1.0",
   "private": true,
